fix: fixed overlapping selection in firefox

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -270,7 +270,7 @@ pre.chroma
 {
     border: 0;
     padding-left: 20px;
-    line-height: 100%;
+    line-height: 132%;
 }
 
 .emoticon {
